# afLib3-generic

./: CMakeLists.txt  README.md
platform/linux/: CMakeLists.txt  linux_logger.c  linux_uart.c  linux_uart.h  linux_utils.c
platform/linux/examples/afBlink/: CMakeLists.txt  linux_af_blink.c
platform/linux/examples/afBlink/profile/afBlink/: device-description.h  device-description.json  device-type.json
platform/linux/examples/afBlink/profile/afBlink/a93b2b57-df05-4979-b9d6-75bca43d0aa0/: device-presentation.json
platform/linux/examples/afBlink/profile/afBlink1B/: device-description.h  device-description.json  device-type.json
platform/linux/examples/afBlink/profile/afBlink1B/a93b2b57-df05-4979-b9d6-75bca43d0aa0/: device-presentation.json
platform/linux/examples/afBlink/profile/afBlink2/: device-description.json  device-type.json  manifest.json
platform/linux/examples/afBlink/profile/afBlink2/a93b2b57-df05-4979-b9d6-75bca43d0aa0/: device-presentation.json
platform/linux/examples/generic_mcu/: CMakeLists.txt  generic_mcu.c  system_attributes.h
